--- a/app/src/main/res/layout/all_news_row.xml
+++ b/app/src/main/res/layout/all_news_row.xml
@@ -1,25 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 <data>
     <variable
-        name="articles"
-        type="com.example.assignmentnewsapp.networking.model.Articles" />
+        name="article"
+        type="com.example.assignmentnewsapp.networking.model.Article" />
 </data>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/all_news_imageView"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/news_imageView_height"
+        loadImage="@{article.urlToImage}"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="@dimen/new_image_margin"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
+    </androidx.appcompat.widget.AppCompatImageView>
     <TextView
         android:id="@+id/headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="@{articles.title}"
+        android:padding="5dp"
+        android:layout_marginLeft="@dimen/news_text_margin"
+        android:layout_marginRight="@dimen/news_text_margin"
+        android:elevation="6dp"
+        android:background="@color/cardview_dark_background_trasparent"
+        android:text="@{article.title}"
+        android:textColor="@color/white"
+        android:textSize="@dimen/HeadingTextSize"
+        app:layout_constraintBottom_toBottomOf="@+id/all_news_imageView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
