--- a/app/src/main/res/layout/all_news_row.xml
+++ b/app/src/main/res/layout/all_news_row.xml
@@ -3,14 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-<data>
+  <data>
     <variable
         name="article"
-        type="com.example.assignmentnewsapp.networking.model.Article" />
-</data>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+        type="com.example.assignmentnewsapp.networking.model.Article"
+        />
+  </data>
+  <androidx.constraintlayout.widget.ConstraintLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="10dp"
+      >
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/all_news_imageView"
         android:layout_width="match_parent"
@@ -39,5 +42,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         />
-</androidx.constraintlayout.widget.ConstraintLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
