--- a/app/src/main/res/layout/footer_loading_state.xml
+++ b/app/src/main/res/layout/footer_loading_state.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    >
   <TextView
       android:id="@+id/error_msg"
       android:textColor="?android:textColorPrimary"
@@ -13,17 +14,20 @@
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:textAlignment="center"
-      tools:text="Timeout"/>
+      tools:text="Timeout"
+      />
   <ProgressBar
       android:id="@+id/progress_bar"
       style="?android:attr/progressBarStyle"
       android:layout_width="match_parent"
       android:layout_height="40dp"
-      android:layout_gravity="center"/>
+      android:layout_gravity="center"
+      />
   <Button
       android:id="@+id/retry_button"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
-      android:text="@string/retry"/>
+      android:text="@string/retry"
+      />
 </LinearLayout>
